--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "prittier": {
+     "plugins": ["prettier-plugin-tailwindcss"]
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -24,6 +27,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "^3.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "vite": "^6.3.5"
   }
 }
